--- a/Week1/lab1.html
+++ b/Week1/lab1.html
@@ -9,6 +9,6 @@
     <h1>Biography</h1>
     <p>I am a creative professional with expertise in sales, marketing, and table top game design </p>.  
     <p>I excel in lead generation, crafting engaging campaigns for dog owners, 
-        and creating innovative projects. Passionate about storytelling and collaboration, they bring energy and vision to every endeavor.</p>
+        and creating innovative projects. Passionate about storytelling and collaboration, and bringing energy and vision to every endeavor.</p>
 </body>
 </html>
